[package]
name = "hay-museum"
version = "0.1.0"
edition = "2024"

[features]
default = []
cuda = ["candle-core/cuda", "candle-core/cudnn", "candle-nn/cuda", "candle-transformers/cuda"]
metal = ["candle-core/metal", "candle-nn/metal"]

[dependencies]
anyhow = "1.0.100"
mimalloc = "0.1.48"
phf = { version = "0.13", features = ["macros"] }
polars = { version = "0.52.0", features = ["lazy", "timezones", "parquet", "strings", "find_many", "is_in", "json", "new_streaming", "concat_str", "object"] }
regex = "1.12.2"
rust-stemmers = "1.2.0"
serde_json = "1.0"

# Candle ML framework for BERT integration
candle-core = "0.9.2-alpha.2"
candle-nn = "0.9.2-alpha.2"
candle-transformers = "0.9.2-alpha.2"
hf-hub = "0.4.3"
tokenizers = "0.22.2"
itertools = "0.14.0"
indicatif = "0.18.3"
